@@ -1,5 +1,8 @@
 2011-05-24  Jason Merrill  <jason@redhat.com>
 
+	PR c++/49105
+	* typeck.c (build_const_cast_1): Handle rvalue references.
+
 	PR c++/47263
 	* decl.c (use_eh_spec_block): Do use an EH spec block for a
 	lambda op().
